--- a/src/Recorrido/Pedidos.form
+++ b/src/Recorrido/Pedidos.form
@@ -8,6 +8,9 @@
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
+  <Events>
+    <EventHandler event="windowClosing" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="formWindowClosing"/>
+  </Events>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -61,9 +64,9 @@
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="6" max="32767" attributes="0"/>
                           <Component id="Regresar5" min="-2" pref="152" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="317" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="311" max="-2" attributes="0"/>
                           <Component id="Regresar7" min="-2" pref="152" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
@@ -73,11 +76,11 @@
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="jComboBox1" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="Regresar3" alignment="0" min="-2" pref="311" max="-2" attributes="0"/>
+                              <Component id="AgregarProductoSeleccionado" alignment="0" min="-2" pref="311" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="Regresar4" min="-2" pref="171" max="-2" attributes="0"/>
+                              <Component id="ConfirmarPedido" min="-2" pref="171" max="-2" attributes="0"/>
                               <Component id="Regresar6" min="-2" pref="171" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -117,8 +120,8 @@
                   </Group>
                   <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="Regresar3" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="Regresar4" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+                      <Component id="AgregarProductoSeleccionado" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="ConfirmarPedido" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -143,7 +146,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="72" max="-2" attributes="0"/>
                       <Component id="jScrollPane2" min="-2" pref="133" max="-2" attributes="0"/>
-                      <EmptySpace pref="276" max="32767" attributes="0"/>
+                      <EmptySpace pref="277" max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -162,7 +165,7 @@
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="2" rowCount="2">
                     <Column editable="true" title="Producto" type="java.lang.Object"/>
-                    <Column editable="true" title="Precio" type="java.lang.Object"/>
+                    <Column editable="true" title="Precio (Q.)" type="java.lang.Object"/>
                   </Table>
                 </Property>
               </Properties>
@@ -181,7 +184,7 @@
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="2" rowCount="4">
                     <Column editable="true" title="Producto" type="java.lang.Object"/>
-                    <Column editable="true" title="Precio" type="java.lang.Object"/>
+                    <Column editable="true" title="Precio (Q.)" type="java.lang.Object"/>
                   </Table>
                 </Property>
               </Properties>
@@ -210,7 +213,7 @@
             <Property name="text" type="java.lang.String" value="Pedidos:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="Regresar3">
+        <Component class="javax.swing.JButton" name="AgregarProductoSeleccionado">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="14" style="0"/>
@@ -221,7 +224,7 @@
             <Property name="text" type="java.lang.String" value="Agregar Producto Seleccionado al Pedido"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Regresar3ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="AgregarProductoSeleccionadoActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
@@ -281,7 +284,7 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="Regresar4">
+        <Component class="javax.swing.JButton" name="ConfirmarPedido">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="14" style="0"/>
@@ -289,7 +292,7 @@
             <Property name="text" type="java.lang.String" value="CONFIRMAR PEDIDO"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Regresar4ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ConfirmarPedidoActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JComboBox" name="jComboBox2">
